# fibgrid

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  data.json  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  coverage.yml
docs/: conf.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2c9a83c2d99891e7___init___py.html  z_2c9a83c2d99891e7_construction_py.html  z_2c9a83c2d99891e7_realization_py.html
src/fibgrid/: construction.py  realization.py  skeleton.py
src/fibgrid/files/: fibgrid_sphere_n430000.nc  fibgrid_wgs84_n430000.nc
tests/: test_construction.py  test_realization.py  test_skeleton.py
