[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[project]
authors = [{ name = "Sebastian Hahn", email = "sebastian.hahn@geo.tuwien.ac.at" }]
name = "fibgrid"
version = "0.0.7"
description = "Construction of Fibonacci grid"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "flake8>=7.3.0",
    "netcdf4>=1.7.3",
    "numba>=0.63.1",
    "numpy>=2.2.6",
    "pip>=25.3",
    "platformdirs>=4.5.1",
    "pre-commit>=4.5.1",
    "pygeogrids>=0.5.3",
    "pyproj>=3.7.1",
    "ruff>=0.14.11",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Natural Language :: English",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma (may conflict with ruff formatter)
    "D203",    # incorrect-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests}/*" = ["E402", "ANN201", "D", "INP001", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.coverage.run]
relative_files = true
