[project]
authors = [{ name = "Sebastian Hahn", email = "sebastian.hahn@geo.tuwien.ac.at" }]
name = "fibgrid"
version = "0.0.8"
description = "Construction of Fibonacci grid"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "netcdf4>=1.7.3",
    "numba>=0.63.1",
    "numpy>=2.2.6",
    "platformdirs>=4.5.1",
    "pygeogrids>=0.5.3",
    "pyproj>=3.7.1",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Natural Language :: English",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
test = [
    "pip>=25.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
lint = [
    "flake8>=7.3.0",
    "ruff>=0.14.12",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma (may conflict with ruff formatter)
    "D203",    # incorrect-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests}/*" = ["E402", "ANN201", "D", "INP001", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.coverage.run]
relative_files = true
source = ["fibgrid"]
